--- a/index.htm
+++ b/index.htm
@@ -49,11 +49,11 @@
 </head>
 <body>
     <h1>ようこそ！</h1>
-    <button class="button" onclick="redirectToSuccess()">認証へ行こう！</button>
+    <button class="button" onclick="redirectToSuccess()">クリック！</button>
 
     <script>
         function redirectToSuccess() {
-            window.location.href = "success.html";
+            window.location.href = "SINE.html";
         }
     </script>
 </body>
